--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -415,6 +415,9 @@ msgstr ""
 msgid "New notebook"
 msgstr ""
 
+msgid "There are currently no notes. Create one by clicking on the (+) button."
+msgstr ""
+
 msgid "Log"
 msgstr ""
 
@@ -432,6 +435,9 @@ msgstr ""
 
 #, javascript-format
 msgid "The notebook could not be saved: %s"
+msgstr ""
+
+msgid "Edit notebook"
 msgstr ""
 
 msgid "Untitled"
@@ -470,10 +476,10 @@ msgstr ""
 msgid "Delete notebook"
 msgstr ""
 
-msgid "Edit notebook"
+msgid "Login with OneDrive"
 msgstr ""
 
-msgid "There are currently no notes. Create one by clicking on the (+) button."
+msgid "Search"
 msgstr ""
 
 msgid ""
@@ -482,4 +488,7 @@ msgid ""
 msgstr ""
 
 msgid "You currently have no notebook. Create one by clicking on (+) button."
+msgstr ""
+
+msgid "Welcome"
 msgstr ""
