Fixed geolocation issue

--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -14,6 +14,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.3\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
 
 msgid "No notebook selected."
 msgstr "Aucun carnet n'est sélectionné."
@@ -418,7 +420,7 @@ msgid "Non-completed ones only"
 msgstr "Tâches complétées seulement"
 
 msgid "Show uncompleted todos on top of the lists"
-msgstr "Montrer les tâches non-terminées en haut des listes"
+msgstr "Tâches non-terminées en haut des listes"
 
 msgid "Save location with notes"
 msgstr "Enregistrer l'emplacement avec les notes"
@@ -522,7 +524,7 @@ msgid "Show metadata"
 msgstr "Afficher les métadonnées"
 
 msgid "View location on map"
-msgstr "Voir l'emplacement sur une carte"
+msgstr "Voir l'emplacement sur la carte"
 
 msgid "Edit"
 msgstr "Editer"
