--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -49,6 +49,48 @@ msgstr ""
 msgid "No notebook is defined. Create one with `mkbook <notebook>`."
 msgstr ""
 
+msgid "NAME"
+msgstr ""
+
+msgid "joplin - a note taking and todo app with synchronisation capabilities"
+msgstr ""
+
+msgid "DESCRIPTION"
+msgstr ""
+
+msgid ""
+"Joplin is a note taking and todo application, which can handle a large "
+"number of notes organised into notebooks."
+msgstr ""
+
+msgid ""
+"The notes are searchable, can be copied, tagged and modified with your own "
+"text editor."
+msgstr ""
+
+msgid ""
+"The notes can be synchronised with various target including the file system "
+"(for example with a network directory) or with Microsoft OneDrive."
+msgstr ""
+
+msgid ""
+"Notes exported from Evenotes via .enex files can be imported into Joplin, "
+"including the formatted content, resources (images, attachments, etc.) and "
+"complete metadata (geolocation, updated time, created time, etc.)."
+msgstr ""
+
+msgid "WEBSITE"
+msgstr ""
+
+msgid "LICENSE"
+msgstr ""
+
+msgid "USAGE"
+msgstr ""
+
+msgid "cat <title>"
+msgstr ""
+
 msgid "Displays the given note."
 msgstr ""
 
@@ -57,6 +99,9 @@ msgstr ""
 
 #, javascript-format
 msgid "Cannot find \"%s\"."
+msgstr ""
+
+msgid "config [name] [value]"
 msgstr ""
 
 msgid ""
@@ -76,9 +121,15 @@ msgstr ""
 msgid "%s = %s"
 msgstr ""
 
+msgid "cp <pattern> [notebook]"
+msgstr ""
+
 msgid ""
 "Duplicates the notes matching <pattern> to [notebook]. If no notebook is "
 "specified the note is duplicated in the current notebook."
+msgstr ""
+
+msgid "edit <title>"
 msgstr ""
 
 msgid "Edit note."
@@ -101,7 +152,13 @@ msgstr ""
 msgid "Starting to edit note. Close the editor to get back to the prompt."
 msgstr ""
 
+msgid "geoloc <title>"
+msgstr ""
+
 msgid "Displays a geolocation URL for the note."
+msgstr ""
+
+msgid "import-enex <file> [notebook]"
 msgstr ""
 
 msgid "Imports an Evernote notebook file (.enex file)."
@@ -145,12 +202,21 @@ msgstr ""
 msgid "Importing notes..."
 msgstr ""
 
+msgid "ls [pattern]"
+msgstr ""
+
 msgid ""
 "Displays the notes in [notebook]. Use `ls /` to display the list of "
 "notebooks."
 msgstr ""
 
+msgid "-n, --limit <num>"
+msgstr ""
+
 msgid "Displays only the first top <num> notes."
+msgstr ""
+
+msgid "-s, --sort <field>"
 msgstr ""
 
 msgid "Sorts the item by <field> (eg. title, updated_time, created_time)."
@@ -159,10 +225,16 @@ msgstr ""
 msgid "Reverses the sorting order."
 msgstr ""
 
+msgid "-t, --type <type>"
+msgstr ""
+
 msgid ""
 "Displays only the items of the specific type(s). Can be `n` for notes, `t` "
 "for todos, or `nt` for notes and todos (eg. `-tt` would display only the "
 "todos, while `-ttd` would display notes and todos."
+msgstr ""
+
+msgid "-f, --format <format>"
 msgstr ""
 
 msgid "Either \"text\" or \"json\""
@@ -176,7 +248,13 @@ msgstr ""
 msgid "Please select a notebook first."
 msgstr ""
 
+msgid "mkbook <notebook>"
+msgstr ""
+
 msgid "Creates a new notebook."
+msgstr ""
+
+msgid "mknote <note>"
 msgstr ""
 
 msgid "Creates a new note."
@@ -185,10 +263,16 @@ msgstr ""
 msgid "Notes can only be created within a notebook."
 msgstr ""
 
+msgid "mv <pattern> <destination>"
+msgstr ""
+
 msgid ""
 "Moves the notes matching <pattern> to <destination>. If <pattern> is a note, "
 "it will be moved to the notebook <destination>. If <pattern> is a notebook, "
 "it will be renamed to <destination>."
+msgstr ""
+
+msgid "rm <pattern>"
 msgstr ""
 
 msgid "Deletes the items matching <pattern>."
@@ -208,7 +292,13 @@ msgstr ""
 msgid "%d notes match this pattern. Delete them?"
 msgstr ""
 
+msgid "search <pattern> [notebook]"
+msgstr ""
+
 msgid "Searches for the given <pattern> in all the notes."
+msgstr ""
+
+msgid "set <note> <name> [value]"
 msgstr ""
 
 msgid "Sets the property <name> of the given <note> to the given [value]."
@@ -218,6 +308,9 @@ msgid "Displays summary about the notes and notebooks."
 msgstr ""
 
 msgid "Synchronises with remote storage."
+msgstr ""
+
+msgid "--target <target>"
 msgstr ""
 
 msgid "Sync to provided target (defaults to sync.target config value)"
@@ -242,6 +335,9 @@ msgstr ""
 msgid "Cancelling..."
 msgstr ""
 
+msgid "tag <command> [tag] [note]"
+msgstr ""
+
 msgid ""
 "<command> can be \"add\", \"remove\" or \"list\" to assign or remove [tag] "
 "from [note], or to list the notes associated with [tag]. The command `tag "
@@ -252,11 +348,17 @@ msgstr ""
 msgid "Invalid command: \"%s\""
 msgstr ""
 
+msgid "todo <action> <pattern>"
+msgstr ""
+
 msgid ""
 "<action> can either be \"toggle\" or \"clear\". Use \"toggle\" to toggle the "
 "given todo between completed and uncompleted state (If the target is a "
 "regular note it will be converted to a todo). Use \"clear\" to convert the "
 "todo back to a regular note."
+msgstr ""
+
+msgid "use <notebook>"
 msgstr ""
 
 msgid ""
@@ -462,6 +564,9 @@ msgid "The notebook could not be saved: %s"
 msgstr ""
 
 msgid "Edit notebook"
+msgstr ""
+
+msgid "Refresh"
 msgstr ""
 
 msgid "Untitled"
