--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -14,6 +14,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.3\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
 
 msgid "No notebook selected."
 msgstr "Aucun carnet n'est sélectionné."
@@ -354,6 +356,11 @@ msgstr ""
 "logiciel :"
 
 msgid ""
+"Cannot refresh token: authentication data is missing. Starting the "
+"synchronisation again may fix the problem."
+msgstr ""
+
+msgid ""
 "Please set the \"sync.2.path\" config value to the desired synchronisation "
 "destination."
 msgstr ""
@@ -512,7 +519,7 @@ msgstr "Nouveau carnet"
 
 msgid "There are currently no notes. Create one by clicking on the (+) button."
 msgstr ""
-"Ce carnet ne contient aucune note. Créez-en une en cliquant sur le bouton "
+"Ce carnet ne contient aucune note. Créez-en une en appuyant sur le bouton "
 "(+)."
 
 msgid "Log"
@@ -583,8 +590,8 @@ msgid ""
 "Click on the (+) button to create a new note or notebook. Click on the side "
 "menu to access your existing notebooks."
 msgstr ""
-"Cliquez sur le bouton (+) pour une nouvelle note ou carnet. Ouvrez le menu "
-"latéral pour accéder à vos carnets."
+"Appuyez sur le bouton (+) pour créer une nouvelle note ou carnet. Ouvrez le "
+"menu latéral pour accéder à vos carnets."
 
 msgid "You currently have no notebook. Create one by clicking on (+) button."
 msgstr ""
